--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,7 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+@import '~vuejs-noty/dist/vuejs-noty.css';
 
 .navbar-laravel {
   background-color: #fff;
