--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11165,6 +11165,7 @@ a.text-dark:focus {
   font-size: large;
   font-weight: bold;
   color: #275169d9;
+  box-shadow: 1px 2px 14px -3px red !important;
 }
 
 @media (max-width: 768px) {
